--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
 python-dotenv
 numpy
-pandas  
-# -e . 
+pandas
 pymongo
 certifi
 pymongo[srv]==3.11
-certifi
 dill
 pyyaml
+fastapi
+uvicorn
+
+# ML and preprocessing
+scikit-learn
+
+# Flask app (for UI)
+Flask
+
+# URL feature extraction dependencies
+requests
+beautifulsoup4
+python-whois
+
+# Optional but recommended
+joblib
